# meilisearch-health-check

./: Cargo.toml  LICENSE
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
src/: datadog_client.rs  main.rs
